fixed controls bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ h3 {
 }
 
 
+/*** MARGIN ***/
+.mr-2 {
+    margin-right: 1rem;
+}
+
+
 /*** ANIMATIONS ***/
 .animate {
     transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
